# Socket-chat

./: .gitignore  CMakeLists.txt  Makefile  README.md  config
config/: config
include/: chatClient.hpp  chatServer.hpp
include/utils/: getConfig.hpp  logger.hpp
src/: CMakeLists.txt  chatClient.cpp  chatClient.hpp  chatServer.cpp  chatServer.hpp
src/utils/: getConfig.cpp  getConfig.hpp  logger.cpp  logger.hpp
test/: CMakeLists.txt  clientTest.cpp  serverTest.cpp
test/unitTests/: clientTest.cpp
